# Team-1B-Fusion

./: .gitignore  .pre-commit-config.yaml  DataSet_ElectricityMaps.py  Dockerfile.server  Dockerfile.ui  EDGAR_Transport.ipynb  Makefile  README.md  docker-compose.yml  enhanced_climategpt_with_personas.py  main.py  mcp_http_bridge.py  mcp_server.py  mcp_server_stdio.py  pyproject.toml  pytest.ini  requirements.txt  run_llm.py  run_mcp_dev.sh  run_mcp_server.sh  start_climategpt.sh
.github/workflows/: ci.yml  deploy.yml  security.yml
data/curated/: manifest_mcp.json
data/curated-2/: manifest_mcp_duckdb.json
docs/: MCP_ARCHITECTURE.md  MCP_MIGRATION_CHECKLIST.md  SYSTEM_REFERENCE.md  TESTING_RESULTS.md
scripts/: DataSet_EDGAR.py  EDGAR_Power_Industry.py  add_expanded_datasets.py  add_monthly_to_manifest.py  create_power_monthly.py  edgar_config.py  expand_cities_dataset.py  process_all_edgar_industries.py
src/: cli.py
src/pipelines/: viirs.py
src/utils/: answer.py  fallbacks.py  http.py  intent.py  logging.py  router.py
testing/: COMPARATIVE_TESTING_GUIDE.md  LM_STUDIO_SETUP.md  QUESTION_BANK_SUMMARY.md  QUICKSTART.md  README.md  TEST_HARNESS_USAGE.md  analyze_results.py  extract_ground_truth.py  requirements_testing.txt  test_10_questions.py  test_config.json  test_harness.py  test_question_bank.csv  test_question_bank.json  test_results_template.csv  verify_setup.py
testing/test_results/: comparison_results_20251102_150056.json  comparison_results_20251102_150221.json  comparison_results_20251102_150658.json  comparison_results_20251102_151032.json  (+27 more)
